Fix overflow bug, Center timer

--- a/src/assets/css/Timer.css
+++ b/src/assets/css/Timer.css
@@ -3,12 +3,15 @@
     font-size: 10rem;
     text-align: center;
     position: fixed;
-    top: 100px;
-    bottom: 100px;
-    left: 0;
-    right: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     -moz-user-select: none;
     -ms-user-select: none;
     -webkit-user-select: none;
     -webkit-touch-callout: none;
+}
+
+.Clock p {
+    margin: 0;
 }
